vlib/v/checker/tests/array_insert_val_err.out
vlib/v/checker/tests/array_insert_val_err.vv:3:16: error: cannot insert `[]int` to `[][2]int`
    1 | fn main() {
    2 |     mut arr := [][2]int{}
    3 |     arr.insert(0, [1, 2])
      |                   ~~~~~~
    4 |     arr.insert(0, [1, 2]!)
    5 |     arr.prepend([1, 2])
vlib/v/checker/tests/array_insert_val_err.vv:5:14: error: cannot prepend `[]int` to `[][2]int`
    3 |     arr.insert(0, [1, 2])
    4 |     arr.insert(0, [1, 2]!)
    5 |     arr.prepend([1, 2])
      |                 ~~~~~~
    6 |     arr.prepend([1, 2]!)
    7 |     println(arr)
